# cryxcrax-manganese

./: LICENSE  README.md  build.py  index.html  patch.txt  pyproject.toml  requirements.txt
installer/: Manganese Setup.spec  install_logic.py  installer_app.py  requirements.txt  uninstaller.py  win_registration.py
manganese/: __main__.py  app.py  cookies.py  downloads.py  history.py  paths.py  platform_win32.py  prefs.py  shared_profile.py  shortcuts.py  tab_suspension.py  theming.py  url_scheme.py  window.py  window_registry.py
manganese/pages/: __init__.py  internal_pages.py  new_tab.py
manganese/widgets/: browser_view.py  draggable.py  find_bar.py  tab_title.py
